fixed an issue with widths on responsive design for mobile, clock was edging out of screen, reducing the clock width solved the problem

--- a/assets/css/appointment.css
+++ b/assets/css/appointment.css
@@ -51,9 +51,9 @@ p.nav-link-color {
 }
 
 .appointment-heading {
-    margin: 30px 0;
     color: #6fc4a2;
     text-align: center;
+    margin-top: 100px;
 }
 
 .appointment-para {
@@ -66,10 +66,17 @@ p.nav-link-color {
     color: white;
 }
 
-.clock-heading {
-    margin: 30px 0;
+.service-heading {
     color: #6fc4a2;
     text-align: center;
+    margin-top: 15px;
+    margin-bottom: -15px;
+}
+
+.service-heading-hr {
+    background-color: #6fc4a2;
+    box-shadow: -2px 2px 30px 6px #39fd9bc9, 0 6px 20px 0px rgb(0 0 0 / 19%);
+    padding-top: 3px;
 }
 
 .date-picker {
@@ -83,16 +90,15 @@ p.nav-link-color {
     cursor: pointer;
     user-select: none;
     box-shadow: -2px 3px 34px 0px #39fd9bc9, 0 6px 20px 0px rgb(0 0 0 / 19%);
-    border-style: groove;
-    border-color: white;
+    border-style: solid;
+    border-color: #6fc4a2;
 }
 
 
 .date-picker .selected-date {
 	width: 100%;
 	height: 100%;
-
-	display: flex;
+    display: flex;
 	justify-content: center;
 	align-items: center;
     color: #6fc4a2;
@@ -101,13 +107,14 @@ p.nav-link-color {
 
 .date-picker .dates {
 	display: none;
-	position: absolute;
+    position: absolute;
+    width: 100%;
 	top: 100%;
 	left: 0;
 	right: 0;
     background-color: #1e203f;
-    border-style: groove;
-    border-color: white;
+    border-style: solid;
+    border-color: #6fc4a2;
     z-index: 1;
 }
 
@@ -146,7 +153,7 @@ p.nav-link-color {
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
     height: 400px;
-    
+    padding-top: 20px;
 }
 .date-picker .dates .days .day { 
 	display: flex;
@@ -163,7 +170,14 @@ p.nav-link-color {
 }
 
 .clock {
-    margin-top: 40px;
+    margin-top: 100px;
+    margin-bottom: 40px;
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
 #hov {
@@ -172,22 +186,50 @@ p.nav-link-color {
     left: 0;
     }
 
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
 
 div.card {
-    height: 400px;
+    position: relative;
+    height: 345px;
+    /* width: 300px; */
+    padding-right: 10px;
     margin-bottom: 30px;
-    margin-top: 110px;
+    margin-top: 60px;
     background-color: #1e203f;
     box-shadow: -2px 2px 30px 6px #39fd9bc9, 0 6px 20px 0px rgb(0 0 0 / 19%);
-    border-style: groove;
+    border-style: solid;
     border-radius: 25px;
+    border-color: #6fc4a2;
+}
+
+#weekday {
+    color: #6fc4a2;
+    text-align: center;
+}
+
+.day {
+    color: white;
+}
+
+.time-sep {
+    color: white;
+}
+
+table {
+    border-collapse: collapse;
+    margin-bottom: 40px;
 }
 
 /*------------------------Footer----------------------------*/
 footer {
     background-color: #1e203f;
     border: solid #6fc4a2;
-    margin-top: 24px;
+    margin-top: 70px;
 }
 
 
